[tool.poetry]
name = "atari-rl"
version = "0.1.0"
description = ""
authors = ["Tanguy Malandain"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
black = "^23.11.0"
torch = "^2.1.1"
torchaudio = "^2.1.1"
torchvision = "^0.16.1"

[tool.poetry.group.dev.dependencies]
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
matplotlib = "^3.8.2"
moviepy = "^1.0.3"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
tensorboard = "^2.15.1"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"